calendar and sitewrap fix

--- a/Club Management System/public/css/style.css
+++ b/Club Management System/public/css/style.css
@@ -84,7 +84,8 @@ body {
 /* Blocks */
 .site-wrap {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: auto;
+  padding-bottom: 100px;
   background: #fff;
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); 
